--- a/mini-front/index.html
+++ b/mini-front/index.html
@@ -72,7 +72,7 @@
   </div>
 
   <script>
-    const API_BASE_URL = "http://localhost:3000";
+    const API_BASE_URL = "https://wizybot-backend.vercel.app";
 
     const inputEl = document.getElementById("user-input");
     const sendBtn = document.getElementById("send-btn");
