--- a/mini-front/index.html
+++ b/mini-front/index.html
@@ -124,7 +124,7 @@
       setResponse("...");
 
       try {
-        const res = await fetch(API_BASE_URL + "/chat", {
+        const res = await fetch(API_BASE_URL + "/api/chat", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
