Refactor API URL handling in index.html to dynamically set chat endpoint and update CORS origins in app-bootstrap.ts for improved deployment flexibility.

--- a/mini-front/index.html
+++ b/mini-front/index.html
@@ -72,12 +72,16 @@
   </div>
 
   <script>
-    const API_BASE_URL =
-      (typeof window !== "undefined" && window.API_BASE_URL) ||
-      (typeof process !== "undefined" &&
-        process.env &&
-        process.env.API_BASE_URL) ||
-      "https://wizybot-backend.vercel.app";
+    (function () {
+      var base =
+        (typeof window !== "undefined" && window.API_BASE_URL) ||
+        (typeof process !== "undefined" &&
+          process.env &&
+          process.env.API_BASE_URL) ||
+        "https://wizybot-backend.vercel.app";
+      base = (base || "").trim().replace(/\/api\/?$/, "");
+      window.__CHAT_URL = base ? base + "/chat" : "https://wizybot-backend.vercel.app/chat";
+    })();
 
     const inputEl = document.getElementById("user-input");
     const sendBtn = document.getElementById("send-btn");
@@ -129,7 +133,7 @@
       setResponse("...");
 
       try {
-        const res = await fetch(API_BASE_URL + "/chat", {
+        const res = await fetch(window.__CHAT_URL, {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
